--- a/assets/css/btn.css
+++ b/assets/css/btn.css
@@ -25,7 +25,7 @@ button {
   max-width: 900px;
   padding: 10px;
   margin: 0 1rem;
-  background-color: #008000;
+  background-color: #fff;
   border-radius: 20px;
   box-shadow: 0 5px 10px #008000, 0 0 0 10px #ffffffeb;
 }
@@ -78,7 +78,7 @@ button {
   height: 25px;
   margin-top: 0;
   border-width: 15px;
-  border: 15px solid #fff;
+  border: 15px solid #008000;
   background-color: transparent;
   border-radius: 50%;
   transition: 0.5s ease all;
@@ -106,7 +106,7 @@ button span:after {
   right: 0;
   width: 45px;
   height: 15px;
-  background-color: #fff;
+  background-color: #008000;
   border-radius: 10px;
   -webkit-transform: rotateZ(0);
   transform: rotateZ(0);
@@ -118,7 +118,7 @@ button span:after {
   width: 67px;
   height: 15px;
   border-width: 0;
-  background-color: #fff;
+  background-color: #008000;
   border-radius: 20px;
 }
 
@@ -146,7 +146,7 @@ button span:after {
 #s-cover:hover button span:after {
   right: -6px;
   width: 40px;
-  background-color: #fff;
+  background-color: #008000;
 }
 
 @media only screen and (max-width: 768px) {
